--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,6 +19,18 @@
   padding: 18px 35px;
   border-radius: 5px;
 }
+.section-title {
+  font-weight: bold;
+  font-size: 35px;
+  color: #181818;
+}
+.section-description {
+  font-size: 18px;
+  color: #757575;
+}
+.secondary-bg {
+  background-color: #fff8f3;
+}
 /* Header styles */
 .header {
   background-image: url("../images/developer.png"),
@@ -50,7 +62,7 @@ nav li a {
   text-decoration: none;
   font-size: 20px;
 }
-/* banner styles */
+/* Banner styles */
 .banner {
   display: flex;
   justify-content: space-between;
@@ -69,4 +81,24 @@ nav li a {
 }
 .banner-profile-picture {
   width: 580px;
+}
+/* Main styles */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/* About styles */
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+.about-items {
+  display: flex;
+  justify-content: space-around;
+}
+.item-description {
+  font-weight: bold;
+  font-size: 20px;
 }
